# demo-chatbot

./: .env  main.py  pyproject.toml
src/Tools/: Availability_check.py  NLU.py  Quote_generator.py  instructions.py  language.py  lead.py  order_placement.py  product_discover.py  shipping_tool.py  support_bot.py  tech_QA_assistant.py  user.py
src/core/: config.py
static/images/: bg2.jfif  bg3.jfif
templates/: chat.html
